completed lab 04 requirments

--- a/index.html
+++ b/index.html
@@ -7,28 +7,37 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/module.css">
+    <link rel="stylesheet" href="/css/theme.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div></div>
     </header>
     <main>
         <div class= 'a'><p>a</p></div>
 
-        <div class= 'container'>
-            <div class= 'b'><p>b</p></div>
-            <div class= 'c'><p>c</p></div>
-            <div class= 'd'><p>d</p></div>
-        </div>
         <div class= "second">
+
+            <div class= 'container'>
+
+                <div class= 'b'><p>b</p></div>
+                <div class='c-h'>
+                <div class="cd">
+                <div class= 'c'><p>c</p></div>
+                <div class= 'd'><p>d</p></div>
+            </div>
+            <div class= "efgh">
             <div class= e> <p>e</p></div>
             <div class= f> <p>f</p></div>
-
+            
             <div class= g> <p>g</p></div>
             <div class= h> <p>h</p></div>
+            </div>
+            <div class='i'><p>i</p></div>
+
         </div>
-        <div class='i'><p>i</p></div>
+        </div>
+        </div>
     </main>
     <footer>   
     </footer>
